# MinerProfiler-qt

./: .travis.yml  CMakeLists.txt  MinerProfiler.pro  README.md
include/: mainwindow.h
src/: mainwindow.cpp
tests/: CMakeLists.txt  MinerProfilerParserTests.cpp  MinerProfilerSMATests.cpp  MinerProfiler_test.cpp
tests/data/: portfolio_value.txt  portfolio_value_test_data.txt  price_log_us-order1.txt  speed_log_us-order1.txt
ui/: mainwindow.ui
